--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.5.0",
     "hardhat": "^2.9.1"
   }
 }
