--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "token-builder",
   "version": "0.1.0",
+  "homepage": "https://jake-rice.github.io/token-builder/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "chai": "^4.3.6",
+    "gh-pages": "^3.2.3",
     "hardhat": "^2.9.1"
   }
 }
