--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "ethers": "^5.6.0",
+    "express": "^4.17.3",
+    "fs-extra": "^10.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
+    "solc": "^0.8.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "concurrently \"react-scripts start\" \"nodemon server.js\"",
+    "start": "concurrently \"react-scripts start\" \"node server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -46,7 +52,9 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "chai": "^4.3.6",
+    "concurrently": "^7.1.0",
     "gh-pages": "^3.2.3",
-    "hardhat": "^2.9.1"
+    "hardhat": "^2.9.1",
+    "nodemon": "^2.0.15"
   }
 }
