--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "token-builder",
   "version": "0.1.0",
-  "homepage": "https://jake-rice.github.io/token-builder/",
+  "homepage": "https://jake-rice-token-builder.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
